# quantum-notebook-studio

./: .gitignore  Dockerfile  README.md  main.py  package.json  pyproject.toml
frontend/: package.json
frontend/public/notebooks/: bb84.ipynb  chsh.ipynb  grover.ipynb
frontend/scripts/: notebook_server_executor.py  sync-notebooks.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/notebook/execute/: route.ts
frontend/src/app/notebook/[notebookId]/: page.tsx
frontend/src/components/: app-footer.tsx  app-theme-provider.tsx  monaco-code-view.tsx  notebook-runtime-page.tsx  notebook-selector-page.tsx
frontend/src/data/: notebook-catalog.ts
frontend/src/lib/: notebook-state.ts  notebook-types.ts  notebook-utils.ts
notebooks/: bb84.ipynb
