[project]
name = "qt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pylatexenc>=2.10",
    "qiskit>=2.4.1",
    "qiskit-aer>=0.17.2",
    "qiskit-algorithms>=0.4.0",
    "qiskit-machine-learning>=0.9.0",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
